fix link selection on mobile devices

--- a/src/modules/Plugins/style-settings.scss
+++ b/src/modules/Plugins/style-settings.scss
@@ -169,7 +169,7 @@
     font-size: var(--font-ui-small);
     margin-top: var(--size-4-1);
     padding: 0;
-    user-select: all;
+    -webkit-user-select: all;
     > div {
       display: none;
     }
